Collada - Armature Export Bug #29465

Closed
opened 2011-11-30 13:46:17 +01:00 by Oleg Axolotl · 7 comments

%%%Here is the scene of rigged mesh. When trying to export and then import it in dae in blender, there is strange things with weights and especially armature that imports back very wrong.
Tried to experiment and delete mesh and export only an armature, an armature still exports/imports wrong.
Tried to delete the control bones from aramture - the same result - armature imports back wrong.
Tried with blender 2.60 r41226 and in 2.57 - same result.
Tried on two computers - same result.
Also tried to import this dae in 3ds max. Both with autodesk collada importer and open collada pugin - also very strange result, there is no mesh, only bones, but exist a bone with the same name as mesh name was.

P.S. Also tried to export in fbx the result is better, but still problem with wrong weights.

Windows XP SP3. Geforce 9600 GSO.%%%

%%%Here is the scene of rigged mesh. When trying to export and then import it in dae in blender, there is strange things with weights and especially armature that imports back very wrong. Tried to experiment and delete mesh and export only an armature, an armature still exports/imports wrong. Tried to delete the control bones from aramture - the same result - armature imports back wrong. Tried with blender 2.60 r41226 and in 2.57 - same result. Tried on two computers - same result. Also tried to import this dae in 3ds max. Both with autodesk collada importer and open collada pugin - also very strange result, there is no mesh, only bones, but exist a bone with the same name as mesh name was. P.S. Also tried to export in fbx the result is better, but still problem with wrong weights. Windows XP SP3. Geforce 9600 GSO.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hi Oleg,

you said that other programs than Blender also show strange results on import of a the collada file exported by Blender. Therefore I'd guess blender exports your rigged mesh incorrectly. Have you tried to reproduce the problem with Blender 2.61?%%%

%%%Hi Oleg, you said that other programs than Blender also show strange results on import of a the collada file exported by Blender. Therefore I'd guess blender exports your rigged mesh incorrectly. Have you tried to reproduce the problem with Blender 2.61?%%%

%%%Hi, there isn't enough information here to reproduce this bug.

As mentioned in the bug reporting guidelines, please include a
test file, clear step-by-step instructions on how to reproduce
this, and full system information (such as OS, graphics card,
driver versions).%%%

%%%Hi, there isn\'t enough information here to reproduce this bug. As mentioned in the bug reporting guidelines, please include a test file, clear step-by-step instructions on how to reproduce this, and full system information (such as OS, graphics card, driver versions).%%%
Member

%%%this thread gives a lot of demoe files and hints about what may go wrong.

http://projects.blender.org/tracker/index.php?func=detail&aid=27598&group_id=9&atid=498

It looks pretty , much like some 90 degrees rotation made unintentionally somewhere along the export. meanwhile we have learned how to distort the rig such that it exports a correct .dae file :) BTW the example i provide in the other thread has been proved to import without issues to Maya.
maybe that helps to isolate the problem...%%%

%%%this thread gives a lot of demoe files and hints about what may go wrong. http://projects.blender.org/tracker/index.php?func=detail&aid=27598&group_id=9&atid=498 It looks pretty , much like some 90 degrees rotation made unintentionally somewhere along the export. meanwhile we have learned how to distort the rig such that it exports a correct .dae file :) BTW the example i provide in the other thread has been proved to import without issues to Maya. maybe that helps to isolate the problem...%%%

%%%Hi,

I've looked at the collada code and used the file from this report to check things out... it's not really a weights problem if you haven't assigned them, the file uses bone envelopes for some of the vertices. Don't think expecting collada export to support them is reasonable.

Can't offer a view on the "not loading into 3ds Max" atm.

%%%

%%%Hi, I've looked at the collada code and used the file from this report to check things out... it's not really a weights problem if you haven't assigned them, the file uses bone envelopes for some of the vertices. Don't think expecting collada export to support them is reasonable. Can't offer a view on the "not loading into 3ds Max" atm. %%%

%%%Collada bugs are not being handled well so far,

for this reason they are all being set as 'TODO' and linked from our wiki page.

http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada

This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%

%%%Collada bugs are not being handled well so far, for this reason they are all being set as \'TODO\' and linked from our wiki page. http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29465
No description provided.